--- a/main.html
+++ b/main.html
@@ -26,5 +26,31 @@
               <a href="#projects" class="header-btn">Наші проєкти</a>
             </div>
     </header>
+    <main>
+      <div class="section">
+        <h1>Ми створюємо мобільні додатки для великих корпорацій</h1>
+        <p class="part-undertext">Lorem Ipsum - це текст-"риба", що часто використовується в пресі та веб-дизайні. Lorem Ipsum є стандартною "рибкою" для текстів на латиниці з початку XVI ст.</p>
+        
+        <div class="services">
+          <div class="service">
+            <img src="circle.png" alt="">
+            <h3>Створення сайтів</h3>
+            <p>Lorem Ipsum - це текст-"риба", часто використовується у пресі та веб-дизайні.</p>
+          </div>
+          <div class="service">
+            <img src="circle.png" alt="">
+            <h3>Створення сайтів</h3>
+            <p>Lorem Ipsum - це текст-"риба", часто використовується у пресі та веб-дизайні.</p>
+          </div>
+          <div class="service">
+            <img src="circle.png" alt="">
+            <h3>Створення сайтів</h3>
+            <p>Lorem Ipsum - це текст-"риба", часто використовується у пресі та веб-дизайні.</p>
+          </div>
+        </div>
+    
+        <a class="btn2" href="#">Всі послуги</a>
+      </div>
+    </main>
 </body>
 </html>
