--- a/main.html
+++ b/main.html
@@ -51,6 +51,75 @@
     
         <a class="btn2" href="#">Всі послуги</a>
       </div>
+      <section class="about-section">
+        <div class="about-container">
+          <div class="about-text">
+            <h2>Високі стандарти розробки</h2>
+            <p>
+              Lorem Ipsum - це текст-"риба", що часто використовується в пресі та веб-дизайні.
+              Lorem Ipsum є стандартною "рибою" для текстів на латиниці з початку XVI ст.
+            </p>
+            <a href="#">Детальніше про компанію</a>
+          </div>
+          <div class="about-image">
+            <img src="laptops.png" alt="">
+          </div>
+        </div>
+      
+        <div class="stats">
+          <div class="stat-item">
+            <img src="script.png" alt="Icon">
+            <span class="number">125</span>
+            <p>Our projects</p>
+          </div>
+          <div class="stat-item">
+            <img src="script.png" alt="Icon">
+            <span class="number">125</span>
+            <p>Our projects</p>
+          </div>
+          <div class="stat-item">
+            <img src="script.png" alt="Icon">
+            <span class="number">125</span>
+            <p>Our projects</p>
+          </div>
+          <div class="stat-item">
+            <img src="script.png" alt="Icon">
+            <span class="number">125</span>
+            <p>Our projects</p>
+          </div>
+          <div class="stat-item">
+            <img src="script.png" alt="Icon">
+            <span class="number">125</span>
+            <p>Our projects</p>
+          </div>
+        </div>
+      </section>
+      <section class="works">
+        <div class="works-container">
+          <h2>Наші роботи на яких ми <br> спеціалізуємось</h2>
+          <button class="works-btn">Всі послуги</button>
+          <div class="cards">
+            <div class="card">
+              <img src="our-work.png" alt="Team work">
+              <h3><span>01.</span> Дослідження і упаковка</h3>
+              <p>Lorem Ipsum - це текст-"риба", що часто використовується в пресі та веб-дизайні. Lorem Ipsum є стандартною "рибкою" для текстів на латиниці з початку XVI ст.</p>
+              <a href="#">Детальніше</a>
+            </div>
+            <div class="card">
+              <img src="our-work.png" alt="Team work">
+              <h3><span>01.</span> Дослідження і упаковка</h3>
+              <p>Lorem Ipsum - це текст-"риба", що часто використовується в пресі та веб-дизайні. Lorem Ipsum є стандартною "рибкою" для текстів на латиниці з початку XVI ст.</p>
+              <a href="#">Детальніше</a>
+            </div>
+            <div class="card">
+              <img src="our-work.png" alt="Team work">
+              <h3><span>01.</span> Дослідження і упаковка</h3>
+              <p>Lorem Ipsum - це текст-"риба", що часто використовується в пресі та веб-дизайні. Lorem Ipsum є стандартною "рибкою" для текстів на латиниці з початку XVI ст.</p>
+              <a href="#">Детальніше</a>
+            </div>
+          </div>
+        </div>
+      </section>      
     </main>
 </body>
 </html>
